# UniFEx

./: .gitignore  README.md  pyproject.toml
configs/: lp_siglip-sovit400m_arcface3_m4d35k.yaml  zs_siglip-sovit400m_pooling.yaml
data/: deep_fashion2_preprocess.py  food_rec22_preprocess.py  furniture180_train.csv  storefronts146_train.csv
notebooks/: submission-guiec.ipynb
src/datasets/: DATASET.md  __init__.py  dataset.py  deep_fashion.py  deep_fashion2.py  fashion200k.py  food101.py  food_recognition.py  furniture180.py  google_landmark.py  hm_personalised_fashion.py  m4d35k.py  met_dataset.py  products10k.py  rp2k.py  shopee.py  stanford_cars.py  stanford_products.py  storefronts146.py  transforms.py
src/model/: __init__.py  backbone.py  custom_model.py  head.py  neck.py
src/train_pipeline/: __init__.py  loss.py  optimizer.py  scheduler.py  tracker.py  train_model.py
src/utils/: GOOGLE_DRIVE.md  __init__.py  default_cfg.py  google_drive.py  logger.py  utils.py
tools/: create_drive_token.py  model_upload.py  train.py  zero_shot_model.py
